// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainArea should match snapshot when MAIN_VIEW_GRAPH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mainVisualisation="graph"
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`MainArea should match snapshot when MAIN_VIEW_SEARCH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mainVisualisation="search"
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
